# YT-MLOPS-CI-Masterclass

./: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  test_app.py  utils.py
.github/workflows/: ci.yaml
